# chatpdf

./: .gitignore  app.py  pyproject.toml
utils/: embeddings.py  embeddings_base.py  embeddings_bedrock.py  embeddings_factory.py  embeddings_hf.py  embeddings_huggingface.py  embeddings_openai.py  text.py
